Trying to add basicMovement again.

--- a/MicroClient.vcxproj
+++ b/MicroClient.vcxproj
@@ -143,6 +143,7 @@
   <ItemGroup>
     <ClCompile Include="Agentsock.cpp" />
     <ClCompile Include="BaseAgent.cpp" />
+    <ClCompile Include="basicMovement.cpp" />
     <ClCompile Include="DSetupDlg.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MicroClient.cpp" />
@@ -161,6 +162,7 @@
   <ItemGroup>
     <ClInclude Include="Agentsock.h" />
     <ClInclude Include="BaseAgent.h" />
+    <ClInclude Include="basicMovement.h" />
     <ClInclude Include="DSetupDlg.h" />
     <ClInclude Include="general.h" />
     <ClInclude Include="MainFrm.h" />
