--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,23 @@
 ################################################################################
 
 /.vs/MicroClient/v15/ipch
+
+# ...
+# Visual C++ cache files
+ipch/
+*.aps
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
+
+# Visual Studio profiler
+*.psess
+*.vsp
+*.vspx
+*.sap
+
+#...
