Implemented faceBall and idleStop.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ################################################################################
 
 /.vs/MicroClient/v15/ipch
+/.vs
 
 # ...
 # Visual C++ cache files
@@ -23,3 +24,4 @@ ipch/
 *.sap
 
 #...
+/Debug
