--- a/MicroClient.rc
+++ b/MicroClient.rc
@@ -76,13 +76,13 @@ IDR_MICROCTYPE          ICON    DISCARDABLE     "res\\MicroClientDoc.ico"
 
 IDD_ABOUTBOX DIALOG DISCARDABLE  0, 0, 235, 55
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "关于 MicroClient"
+CAPTION "About Jeff (MicroClient)"
 FONT 9, "宋体"
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,11,17,20,20
-    LTEXT           "MicroClient 1.0 版",IDC_STATIC,40,10,119,8,SS_NOPREFIX
-    LTEXT           "版权所有 (C) 2000",IDC_STATIC,40,25,119,8
-    DEFPUSHBUTTON   "确定",IDOK,178,7,50,14,WS_GROUP
+    LTEXT           "MicroClient 1.0",IDC_STATIC,40,10,119,8,SS_NOPREFIX
+    LTEXT           "by Jeff (C) 2000",IDC_STATIC,40,25,119,8
+    DEFPUSHBUTTON   "I'm Gay",IDOK,178,7,50,14,WS_GROUP
 END
 
 IDD_DIALOG1 DIALOG DISCARDABLE  0, 0, 187, 88
